fix horizontal wrap of pre elements

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -478,6 +478,7 @@ button.icon-button {
 
 pre:not(.CodeMirror-line) {
     color: var(--main-text-color) !important;
+    white-space: pre-wrap;
 }
 
 .file-preview-content {
